--- a/QuickBookOauth/Pages/Index.razor
+++ b/QuickBookOauth/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using Intuit.Ipp.OAuth2PlatformClient
+@inject NavigationManager NavigationManager
 
 <h1>Hello, world!</h1>
 
@@ -7,20 +7,20 @@
 
 @code
 {   
-    public NavigationManager NavigationManager { get; set; }
-    private const string ClientId = "AB982kbi6DYVFZK8Ea4oaQDkss3SJmUSYjR7OJMDa2zIOiRBtS";
-    private const string ClientSecret = "3PyFAlJ3bDPG0uGuHWqvYAUFosOjVPsv1qE0dZeZ";
-    private const string RedirectUrl = "https://developer.intuit.com/v2/OAuth2Playground/RedirectUrl";
-    private const string Environment = "";
-    private readonly OAuth2Client _oauthClient = new OAuth2Client(ClientId, ClientSecret, RedirectUrl, Environment);
+        private const string ClientId = "AB982kbi6DYVFZK8Ea4oaQDkss3SJmUSYjR7OJMDa2zIOiRBtS";
+        private const string Scope = "com.intuit.quickbooks.accounting";
+        private const string State = "1235";
+        private const string RedirectUrl = "https://localhost:44306/receiver";
 
     private string GetAuthorizeUrl()
     {
-        //Prepare scopes
-        var scopes = new List<OidcScopes> { OidcScopes.Accounting };
+        // //Prepare scopes
+        // var scopes = new List<OidcScopes> { OidcScopes.Accounting };
+        //
+        // //Get the authorization URL
+        // return _oauthClient.GetAuthorizationURL(scopes);
 
-        //Get the authorization URL
-        return _oauthClient.GetAuthorizationURL(scopes);
+        return $"https://appcenter.intuit.com/connect/oauth2?client_id={ClientId}&scope={Scope}&redirect_uri={RedirectUrl}&response_type=code&state={State}";
     }
 
     private void Redirect()
