--- a/QuickBookOauth/Pages/Index.razor
+++ b/QuickBookOauth/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @inject NavigationManager NavigationManager
+@inject IHttpContextAccessor HttpContextAccessor
 
 <h1>Hello, world!</h1>
 
@@ -10,17 +11,11 @@
         private const string ClientId = "AB982kbi6DYVFZK8Ea4oaQDkss3SJmUSYjR7OJMDa2zIOiRBtS";
         private const string Scope = "com.intuit.quickbooks.accounting";
         private const string State = "1235";
-        private const string RedirectUrl = "https://localhost:44306/receiver";
 
     private string GetAuthorizeUrl()
     {
-        // //Prepare scopes
-        // var scopes = new List<OidcScopes> { OidcScopes.Accounting };
-        //
-        // //Get the authorization URL
-        // return _oauthClient.GetAuthorizationURL(scopes);
-
-        return $"https://appcenter.intuit.com/connect/oauth2?client_id={ClientId}&scope={Scope}&redirect_uri={RedirectUrl}&response_type=code&state={State}";
+        var redirectUri = $"https://{HttpContextAccessor.HttpContext!.Request.Host}/receiver";
+        return $"https://appcenter.intuit.com/connect/oauth2?client_id={ClientId}&scope={Scope}&redirect_uri={redirectUri}&response_type=code&state={State}";
     }
 
     private void Redirect()
